--- a/Curso Desenvolvimento Web/Node Projeto/package.json
+++ b/Curso Desenvolvimento Web/Node Projeto/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Node",
+  "name": "node",
   "version": "1.0.0",
   "description": "",
   "main": "src/servidor.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "1.18.2",
     "express": "4.16.2"
   },
   "devDependencies": {
